fix title words break in banner home

--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -16,14 +16,26 @@
     }
     h1{
         width: 100%;
+        position: absolute;
+        top: 1rem;
+        display: flex;
+        justify-content: center;
+        @media screen and (max-width: 800px) {
+            top: 0;
+            align-items: start;
+            flex-direction: column;
+            margin-left: 20px;
+        }
+    }
+    h1 p{
+        width: auto;
         padding: 0;
-        margin: 0;
+        margin: 0 10px 0 0;
         color: white;
         font-size: $base-font-size*3;
         font-weight: 500;
         text-align: center;
-        position: absolute;
-        top: 2rem;
+        
         @media screen and (max-width: 780px) {
             top: 1rem;
         }
